<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image_autorization"
    tools:context=".SignInActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_gradient_autorization"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="312dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="271dp"
            android:background="@color/white"
            android:elevation="2dp"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="50dp"
                android:layout_height="50dp">

                <ImageView
                    android:id="@+id/iconImageLogin"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_user" />
            </FrameLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_line" />

            <EditText
                android:id="@+id/EditText_User"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/style_edit_text_holo"
                android:hint="@string/login"
                android:inputType="textPersonName"
                android:text="Ivanov.I"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="312dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:elevation="2dp"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="50dp"
                android:layout_height="50dp">

                <ImageView
                    android:id="@+id/iconImagePassword"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_password" />
            </FrameLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_line" />

            <EditText
                android:id="@+id/EditText_Password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/style_edit_text_holo"
                android:hint="Password"
                android:inputType="textPassword"
                android:text="password"
                android:textSize="13sp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textSize="13sp" />

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="312dp"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/style_button_autorization"
            android:onClick="SignInToStartScreen"
            android:text="@string/sign_in"
            android:textSize="13sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textViewCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:onClick="SignInToSignUp"
            android:text="@string/create_a_new_account"
            android:textSize="13sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>