<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image_autorization"
    tools:context=".SignUpActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_gradient_autorization"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="312dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="295dp"
            android:background="@color/white"
            android:elevation="2dp"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="50dp"
                android:layout_height="50dp">

                <ImageView
                    android:id="@+id/iconImageLogin"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_user" />
            </FrameLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_line" />

            <EditText
                android:id="@+id/EditText_User"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/style_edit_text_holo"
                android:hint="@string/login"
                android:inputType="textPersonName"
                android:text="Ivanov.I"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="312dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:elevation="2dp"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="50dp"
                android:layout_height="50dp">

                <ImageView
                    android:id="@+id/iconImageEmail"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_email" />
            </FrameLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_line" />

            <EditText
                android:id="@+id/EditText_Email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/style_edit_text_holo"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:text="ivanov@gmail.com"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="312dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="7dp"
            android:background="@color/white"
            android:elevation="2dp"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="50dp"
                android:layout_height="50dp">

                <ImageView
                    android:id="@+id/iconImagePassword"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_password" />
            </FrameLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_line" />

            <EditText
                android:id="@+id/EditText_Password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/style_edit_text_holo"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="password"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="312dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:elevation="2dp"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="50dp"
                android:layout_height="50dp">

                <ImageView
                    android:id="@+id/iconImagePasswordRep"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_password" />
            </FrameLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_line" />

            <EditText
                android:id="@+id/EditText_PasswordTrust"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/style_edit_text_holo"
                android:hint="Confirm password"
                android:inputType="textPassword"
                android:text="password"
                android:textSize="13sp" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="312dp"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="28dp"
            android:background="@drawable/style_button_autorization"
            android:onClick="TrustPassword"
            android:text="@string/sign_in"
            android:textSize="13sp"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>